Use the StandardCharsets object instead of hard-coding the chartset name